<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="vm"
            type="com.atvantiq.parqngomall.ui.viewmodels.profile.ProfileVM" />
    </data>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.features.profile.ProfileCompleteActivity">

    <include
        android:id="@+id/completeProfileToolbar"
        layout="@layout/toolbar_custom">
    </include>

    <ScrollView
        android:layout_weight="1"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:padding="@dimen/padding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/firstNameEt"
                style="@style/CustomEditRegularStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_first_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:lines="1"
                android:maxLines="1"
                android:text="@={vm.firstName}" />

            <EditText
                android:id="@+id/lastNameEt"
                style="@style/CustomEditRegularStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:hint="@string/enter_last_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:lines="1"
                android:maxLines="1"
                android:text="@={vm.lastName}" />

            <EditText
                android:id="@+id/emailEt"
                style="@style/CustomEditRegularStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:hint="@string/enter_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:text="@={vm.email}" />

            <androidx.appcompat.widget.AppCompatButton
                android:onClick="@{()->vm.onSubmitDetails()}"
                style="@style/CustomPrimaryButton"
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:text="Submit" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
</layout>